[gd_scene load_steps=2 format=3 uid="uid://bdaoqh6k1rwq3"]

[ext_resource type="Script" uid="uid://c07r2ousn0bue" path="res://Scripts/Menu/main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -40.0
offset_right = 300.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="PlayButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="LicensesCreditsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Licenses & Credits"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Quit
"

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 150.0
offset_right = 1710.0
offset_bottom = 355.0
alignment = 1

[node name="GameTitleLabel" type="Label" parent="BoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 150
text = "Maintain Neutrality"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 1000.0
offset_right = 250.0
offset_bottom = 1080.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "By: Tristen"
horizontal_alignment = 1
vertical_alignment = 1
